# Zade

./: .gitignore  AUDIT.md  CHANNEL-AUTH-DESIGN.md  CUTOVER-CHECKLIST.md  DESKTOP-UNIVERSE-DESIGN.md  EGRESS-DESIGN.md  PROJECT-AUTONOMY-HANDOFF.md  README.md  Run-Zade-Benchmark.cmd  Run-Zade-Cadence.cmd  Run-Zade-Monthly-Cadence.cmd  Run-Zade-Prune-Backups.cmd  Run-Zade-Smoke.cmd  Run-Zade-Supervise.cmd  Run-Zade-Weekly-Cadence.cmd  SWARM-DECISION.md  Start-Zade.cmd  UsersTiBonAppDataLocalTempclaudeC--LocalAICofounderd2b690ab-839d-4a70-aadf-df11f2642eddscratchpadsurfacing_inline.js  ZADE-MCP-SURFACE.md  config.example.toml  config.toml  pyproject.toml  pytest_out2.txt  skills-lock.json
.claude/: launch.json
.github/workflows/: self-knowledge.yml
context/self/: .zade-allowlist.txt  zade.md
scripts/: backup.ps1  benchmark-models.ps1  build-runner-images.ps1  configure-openai-review.ps1  install-cadence-task.ps1  install-health-monitor-task.ps1  install-inbox-watcher-task.ps1  install-project-intake-watcher-task.ps1  install-self-knowledge-hook.ps1  install-shortcut.ps1  install-supervisor-task.ps1  install-trading-brief-task.ps1  install-tray-task.ps1  migrate-initial-project-intake.ps1  monitor-health.ps1  prune-backups.ps1  restore-backup.ps1  run-cadence.ps1  run-inbox-watcher.ps1  run-project-intake-watcher.ps1  run-trading-brief.ps1  run-tray.ps1  smoke-contract.ps1  start.ps1  status.ps1  stop.ps1  supervise.ps1  uninstall-cadence-task.ps1  uninstall-supervisor-task.ps1  zade-token.ps1
shell/: .gitignore  README.md  package-lock.json  package.json  zade-update.key  zade-update.key.pub
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: main.rs
tests/: conftest.py  test_actions.py  test_agent_surface.py  test_anthropic_build.py  test_api.py  test_authority.py  test_autonomy.py  test_browser.py  test_build_assessment.py  test_build_budget.py  test_build_calibration.py  test_build_config.py  test_build_integration.py  test_build_orchestration_store.py  test_build_orchestrator.py  test_build_routing.py  test_build_service.py  test_build_store.py  test_build_verification.py  test_build_workers.py  test_channel_auth.py  test_coding_agent.py  test_command_runner.py  test_commitments.py  test_config.py  test_connectors.py  test_conversation_distill.py  test_conversations.py  test_critic.py  test_db.py  test_delegation.py  test_devtools.py  test_egress.py  test_evals.py  test_founder.py  test_github_ci.py  test_grounding.py  test_heartbeat.py  test_inbox_watcher_scripts.py  test_ingestion.py  (+60 more)
ui/: actions.html  approvals.html  browser.html  charter.html  commitments.html  connectors.html  digest.html  evals.html  founder.html  inbox.html  index.html  ledger.html  memory.html  notifications.html  ops.html  research.html  screen.html  settings.html  skills.html  splash.html  strategy.html  surfacing.html  swarm.html  system.html  trading.html  vault.html  voice.html  zade-ui.css  zade-ui.js
(+139 files in other folders)
