[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-cofounder-kernel"
version = "0.1.0"
description = "Local-first AI co-founder kernel with Ollama, SQLite memory, audit logs, and typed tools."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.4",
]
browser = [
  "playwright>=1.40",
]
tray = [
  "pystray>=0.19",
  "Pillow>=10",
]

[project.scripts]
cofounder-kernel = "cofounder_kernel.__main__:main"
zade-tray = "cofounder_kernel.tray:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

