[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-cofounder-kernel"
version = "0.1.0"
description = "Local-first AI co-founder kernel with Ollama, SQLite memory, audit logs, and typed tools."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
cloud = [
  "anthropic>=0.117,<0.118",
]
dev = [
  "httpx>=0.28",
  "PyYAML>=6.0",
  "pytest>=8.4",
]
browser = [
  "playwright>=1.40",
]
review = [
  "openai>=2.0,<3",
]
tray = [
  "pystray>=0.19",
  "Pillow>=10",
]
screen = [
  "mss>=9",
]

[project.scripts]
cofounder-kernel = "cofounder_kernel.__main__:main"
zade-tray = "cofounder_kernel.tray:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cofounder_kernel.prompt_assets.zade" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

