[package]
name = "zade-shell"
version = "0.2.0"
description = "Zade desktop universe shell — native frame around the co-founder kernel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
ureq = { version = "2", default-features = false }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
